fixed logo spacing

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -18,10 +18,6 @@
   @apply my-5;
 }
 
-/* .invert-svg {
-  filter: invert(95%) !important;
-} */
-
 /* https://stackoverflow.com/questions/61083813/how-to-avoid-internal-autofill-selected-style-to-be-applied */
 input:-webkit-autofill,
 input:-webkit-autofill:focus {
